WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170504
WebAssembly: We shouldn't need to pin size registers if we have a fast memory.
https://bugs.webkit.org/show_bug.cgi?id=170504
Summary
WebAssembly: We shouldn't need to pin size registers if we have a fast memory.
Keith Miller
Reported
2017-04-05 06:57:59 PDT
WebAssembly: We shouldn't need to pin size registers if we have a fast memory.
Attachments
Patch
(11.70 KB, patch)
2017-04-05 06:59 PDT
,
Keith Miller
mark.lam
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews113 for mac-elcapitan
(1.57 MB, application/zip)
2017-04-05 08:17 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2017-04-05 06:59:34 PDT
Created
attachment 306281
[details]
Patch
Build Bot
Comment 2
2017-04-05 08:17:54 PDT
Comment on
attachment 306281
[details]
Patch
Attachment 306281
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/3477981
New failing tests: imported/w3c/web-platform-tests/fetch/api/cors/cors-preflight-worker.html
Build Bot
Comment 3
2017-04-05 08:17:55 PDT
Created
attachment 306282
[details]
Archive of layout-test-results from ews113 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Mark Lam
Comment 4
2017-04-05 09:43:02 PDT
Comment on
attachment 306281
[details]
Patch r=me
Saam Barati
Comment 5
2017-04-05 10:10:30 PDT
Comment on
attachment 306281
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=306281&action=review
> Source/JavaScriptCore/wasm/WasmB3IRGenerator.cpp:328 > + m_proc.pinRegister(regInfo.sizeRegister);
I wonder if we should just rid the code base of the notion of multiple size registers. It's weird we have code that tries to handle it, but we don't even know if it works.
Keith Miller
Comment 6
2017-04-05 10:12:38 PDT
rdar://problem/31107374
Keith Miller
Comment 7
2017-04-05 10:14:59 PDT
Comment on
attachment 306281
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=306281&action=review
>> Source/JavaScriptCore/wasm/WasmB3IRGenerator.cpp:328 >> + m_proc.pinRegister(regInfo.sizeRegister); > > I wonder if we should just rid the code base of the notion of multiple size registers. It's weird we have code that tries to handle it, but we don't even know if it works.
Yeah, it might be worthwhile. I initially made the abstraction since Fil seemed interested. Either way, I think it should happen in another patch.
Keith Miller
Comment 8
2017-04-05 10:19:24 PDT
Committed
r214950
: <
http://trac.webkit.org/changeset/214950
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug